--- a/index.html
+++ b/index.html
@@ -18,41 +18,41 @@
         <div class="caption">
           <h1>Lyrics</h1>
 
-          <div class="search-container">
+          <form class="search-container" id="form">
             <input type="text" name="search" id="search-input" />
-            <a href="#" class="btn" id="search-btn">Search</a>
-          </div>
+            <button class="btn" id="search-btn">Search</button>
+          </form>
         </div>
       </div>
     </header>
-    
+
     <div class="container">
-      <div class="music-container">
-        <div class="song">
+      <ul class="music-container">
+        <li class="song">
           <div class="song__artist">Artist</div>
           <div class="song__name">Song</div>
           <a href="#" class="song__btn btn">Lyrics</a>
-        </div>
-        <div class="song">
+        </li>
+        <li class="song">
           <div class="song__artist">Artist</div>
           <div class="song__name">Song</div>
           <a href="#" class="song__btn btn">Lyrics</a>
-        </div>
-        <div class="song">
+        </li>
+        <li class="song">
           <div class="song__artist">Artist</div>
           <div class="song__name">Song</div>
           <a href="#" class="song__btn btn">Lyrics</a>
-        </div>
-        <div class="song">
+        </li>
+        <li class="song">
           <div class="song__artist">Artist</div>
           <div class="song__name">Song</div>
           <a href="#" class="song__btn btn">Lyrics</a>
-        </div>
-        <div class="song">
-          <div class="song__artist">Artist</div>
-          <div class="song__name">Song</div>
-          <a href="#" class="song__btn btn">Lyrics</a>
-        </div>
+        </li>
+      </ul>
+
+      <div class="prev-next-container">
+        <!-- <a href="#" class="song__btn btn">< Prev</a>
+        <a href="#" class="song__btn btn">Next ></a> -->
       </div>
     </div>
   </body>
