--- a/index.html
+++ b/index.html
@@ -28,31 +28,16 @@
 
     <div class="container">
       <ul class="music-container">
-        <li class="song">
+        <!-- <li class="song">
           <div class="song__artist">Artist</div>
           <div class="song__name">Song</div>
-          <a href="#" class="song__btn btn">Lyrics</a>
-        </li>
-        <li class="song">
-          <div class="song__artist">Artist</div>
-          <div class="song__name">Song</div>
-          <a href="#" class="song__btn btn">Lyrics</a>
-        </li>
-        <li class="song">
-          <div class="song__artist">Artist</div>
-          <div class="song__name">Song</div>
-          <a href="#" class="song__btn btn">Lyrics</a>
-        </li>
-        <li class="song">
-          <div class="song__artist">Artist</div>
-          <div class="song__name">Song</div>
-          <a href="#" class="song__btn btn">Lyrics</a>
-        </li>
+          <button class="song__btn btn">Lyrics</button>
+        </li> -->
       </ul>
 
       <div class="prev-next-container">
-        <!-- <a href="#" class="song__btn btn">< Prev</a>
-        <a href="#" class="song__btn btn">Next ></a> -->
+        <!-- <button class="song__btn btn">< Prev</button>
+        <button class="song__btn btn">Next ></button> -->
       </div>
     </div>
   </body>
